Modify footer layout issues

--- a/scss/_home__rwd.scss
+++ b/scss/_home__rwd.scss
@@ -76,6 +76,12 @@
     }
   }
   .l-footer {
+    & > * {
+      width: 50%;
+    }
+    .copyright{
+      margin-right: 0;
+    }
     ul {
         order: 2;
         margin-top: 3rem;
