--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -215,6 +215,9 @@
 .l-footer {
   border-top: 1px solid $black-0;
   padding: 20px 0;
+  .copyright{
+    margin-right: 100px;
+  }
 }
 .l-top {
   margin-left: auto;
